--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.1",
     "@nextui-org/react": "^2.2.9",
     "framer-motion": "^10.16.16",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-loader-spinner": "^6.1.4"
+    "react-loader-spinner": "^6.1.4",
+    "react-responsive-carousel": "^3.2.23",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
