--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.1",
     "@nextui-org/react": "^2.2.9",
+    "flowbite": "^2.2.1",
+    "flowbite-react": "^0.7.2",
     "framer-motion": "^10.16.16",
     "next": "14.0.4",
     "react": "^18",
