--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.1",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.9",
     "@nextui-org/react": "^2.2.9",
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
@@ -22,6 +23,7 @@
     "react-dom": "^18",
     "react-loader-spinner": "^6.1.4",
     "react-responsive-carousel": "^3.2.23",
+    "styled-components": "^6.1.3",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
