--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "@mui/material": "^5.15.1",
     "@mui/styled-engine-sc": "^6.0.0-alpha.9",
     "@nextui-org/react": "^2.2.9",
+    "@portabletext/react": "^3.0.11",
+    "@sanity/client": "^6.10.0",
+    "@sanity/image-url": "^1.0.2",
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
     "framer-motion": "^10.16.16",
     "next": "^14.0.4",
+    "next-sanity": "^7.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^6.1.4",
