--- a/.env
+++ b/.env
@@ -3,6 +3,6 @@ API_TOKEN_NEWS= 9ea13fb524e84946b610830c9d9eb4a3
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY= pk_test_dmVyaWZpZWQtd2hhbGUtMTAuY2xlcmsuYWNjb3VudHMuZGV2JA
 CLERK_SECRET_KEY= sk_test_PXnD574hDJfGrmsWXMUg8PH8NMNiViazW0Io5D7Pbz
 NEXT_PUBLIC_SANITY_API_VERSION= 2023-11-1
-NEXT_PUBLIC_SANITY_PROJECT_ID= m5tn5rhb
+NEXT_PUBLIC_SANITY_PROJECT_ID= kaw6jo0l
 NEXT_PUBLIC_SANITY_DATASET= production
 SANITY_API_TOKEN= 
