--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@portabletext/react": "^3.0.11",
     "@sanity/client": "^6.10.0",
     "@sanity/image-url": "^1.0.2",
+    "axios": "^1.6.3",
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
     "framer-motion": "^10.16.16",
@@ -26,6 +27,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^6.1.4",
+    "react-query": "^3.39.3",
     "react-responsive-carousel": "^3.2.23",
     "styled-components": "^6.1.3",
     "swiper": "^11.0.5"
