--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@portabletext/react": "^3.0.11",
     "@sanity/client": "^6.10.0",
     "@sanity/image-url": "^1.0.2",
+    "@vercel/speed-insights": "^1.0.3",
     "axios": "^1.6.3",
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
